# bevy_html_tailwind

./: Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
assets/fonts/: main.html
assets/marker/: main.html
assets/simple/: main.html
examples/fonts/: main.rs
examples/marker/: main.rs
examples/simple/: main.rs
src/: assets.rs  bundle.rs  lib.rs  registry.rs  systems.rs
src/internal/: dom.rs  mod.rs  tailwind.rs
