[package]
name = "bevy_html_tailwind"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
authors = ["Niklas Pfister <git@omikron.dev>"]
repository = "github.com/myOmikron/bevy_html_tailwind"
description = "Use HTML + Tailwind CSS to generate bevy ui trees"

[[example]]
name = "simple"
path = "examples/simple/main.rs"

[[example]]
name = "marker"
path = "examples/marker/main.rs"

[[example]]
name = "fonts"
path = "examples/fonts/main.rs"

[dependencies]
# Error handling
thiserror = { version = "~2" }
# XML DOM
roxmltree = { version = "~0.21" }
# Parsing of tailscale classes
regex = { version = "~1" }

[dependencies.bevy]
version = "~0.17"
default-features = false
features = ["bevy_asset", "bevy_ui"]

[dev-dependencies]
bevy = { version = "~0.17", features = ["file_watcher"] }
bevy-inspector-egui = { version = "~0.35" }
